Add Tools/How-I-Create page, navigation links and styles

--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
             <a href="index.html">Home</a>
             <a href="education.html">Healthcare Education</a>
             <a href="research-library.html">Research Library</a>
+            <a href="tools.html">Tools / How I Create</a>
+            <a href="multimedia.html">Multimedia</a>
             <a href="public.html">Public Info</a>
             <a href="donate.html">Donate</a>
             <a href="contact.html">Contact</a>
