Site branding updates: update homepage messaging for 'medicine of music', add MadMoozeMusic partnership mentions and refine palette

--- a/about.html
+++ b/about.html
@@ -26,7 +26,8 @@
         </nav>
     </header>
     <main class="main-content">
-<h2>About FreeEd4Med</h2><p>We are a nonprofit organization committed to providing free, accessible education for medical professionals and the public.</p>
+<h2>About FreeEd4Med</h2>
+<p>FreeEd4Med.org blends evidence‑based medical education with creative music partnerships. We work with artists (including MadMoozeMusic) and partners like Songs of Love Foundation to create music‑for‑healing resources, clinical programs, and community outreach.</p>
     </main>
     <footer class="footer">
       <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a></p>
