--- a/education.html
+++ b/education.html
@@ -26,10 +26,11 @@
         </nav>
     </header>
     <main class="main-content">
-<h2>Healthcare Professional Education</h2><p>Explore courses, articles, and videos tailored to nurses, doctors, PAs, and NPs.</p>
+<h2>Healthcare Professional Education</h2>
+<p>Explore courses, articles, and videos tailored to nurses, doctors, PAs, NPs — and collaborating artists — about clinical best practices and how music can be used safely and effectively in care.</p>
     </main>
     <footer class="footer">
-      <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a></p>
+      <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a> — in partnership with MadMoozeMusic</p>
     </footer>
   </div>
 </body>
