--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
     </header>
     <main class="main-content">
       <section class="intro">
-        <h2>Empowering Medical Professionals & the Public</h2>
-        <p>FreeEd4Med.org is a nonprofit offering free, high-quality medical education for healthcare professionals and the public.</p>
+        <h2>Empowering Healing Through Education and the Medicine of Music</h2>
+        <p>FreeEd4Med.org is a nonprofit blending evidence-based medical education with practical music‑for‑healing resources — for healthcare professionals, artists, and the public.</p>
         <a class="donate-btn" href="donate.html">Donate Now</a>
       </section>
       <section class="features">
         <div class="feature">
           <h3>Free Lessons</h3>
-          <p>Access video lessons and downloadable content designed by healthcare professionals.</p>
+          <p>Access video lessons and downloadable content designed by healthcare professionals and artists collaborating on therapeutic music projects.</p>
         </div>
         <div class="feature">
           <h3>Public Resources</h3>
-          <p>Learn how to protect your health and understand the healthcare system.</p>
+          <p>Learn how to protect your health and use music as a practical tool for wellbeing and emotional support.</p>
         </div>
         <div class="feature">
-          <h3>Medical News</h3>
-          <p>Stay current with AI-curated headlines and health research updates.</p>
+          <h3>Music & Healing</h3>
+          <p>Explore research, playlists, and artist workflows focused on how music supports clinical care, recovery, and emotional resilience.</p>
         </div>
       </section>
     </main>
