--- a/news.html
+++ b/news.html
@@ -58,7 +58,7 @@
     </main>
 
     <footer class="footer">
-      <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a></p>
+      <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a> — in partnership with MadMoozeMusic</p>
     </footer>
   </div>
 
