--- a/research-library.html
+++ b/research-library.html
@@ -233,7 +233,7 @@
     </main>
 
     <footer class="footer">
-      <p>&copy; 2025 FreeEd4Med.org</p>
+      <p>&copy; 2025 FreeEd4Med.org — in partnership with MadMoozeMusic</p>
     </footer>
   </div>
 </body>
