--- a/public.html
+++ b/public.html
@@ -29,7 +29,7 @@
 <h2>Public Health Information</h2><p>Learn how to recognize symptoms, navigate care, and prevent illness.</p>
     </main>
     <footer class="footer">
-      <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a></p>
+      <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a> — in partnership with MadMoozeMusic</p>
     </footer>
   </div>
 </body>
