Refocus artist guidance: emphasize digital/streaming delivery, stems, metadata and licensing

--- a/multimedia.html
+++ b/multimedia.html
@@ -55,15 +55,15 @@
       </section>
 
       <section>
-        <h3>Artist Participation & Partnership</h3>
-        <p>Artists — you can meaningfully help:</p>
+        <h3>Artist Participation & Partnership (digital first)</h3>
+        <p>Artists — the most scalable impact comes from preparing studio recordings and assets for digital delivery. Suggested ways to contribute:</p>
         <ul>
-          <li>Donate original tracks or stems for therapeutic playlists</li>
-          <li>Volunteer to write personalized songs (partner with Songs of Love)</li>
-          <li>Host a virtual performance or workshop for patients and care teams</li>
-          <li>License a single or album for use in clinical programs or playlists</li>
+          <li>Donate studio masters and stems for inclusion in therapeutic playlists and apps (provide license terms).</li>
+          <li>Volunteer to write personalized songs (partner with Songs of Love) — provide recorded masters so they can be distributed digitally to recipients.</li>
+          <li>Submit curated streaming playlists and upload to platform‑friendly formats (Spotify, Apple Music) and provide public playlist links we can embed.</li>
+          <li>License tracks or albums to clinical programs, or provide one‑time use permissions with clear terms so hospitals and apps can integrate the music.</li>
         </ul>
-        <p>Start by <a href="contact.html">contacting our team</a>; we'll help you connect with clinical partners and Songs of Love—link up your artist site (e.g., MadMoozeMusic) so we can credit and cross-promote.</p>
+        <p>Practical delivery checklist: provide WAV/FLAC stems, a -14 LUFS preview track, chapter markers for long mixes (where relevant), and a short README with intended use and licensing. Start by <a href="contact.html">contacting our team</a>; we’ll help you connect with clinical partners and Songs of Love and cross‑promote your MadMoozeMusic presence.</p>
       </section>
 
     </main>
