--- a/tools.html
+++ b/tools.html
@@ -71,6 +71,16 @@ osc.start();
 gain.gain.linearRampToValueAtTime(0.02, ctx.currentTime + 4);
 // experiment: add slow tremolo, stereo width, and warm reverb</pre>
         </div>
+        <div class="tool-card">
+          <h3>4) Preparing tracks for digital delivery</h3>
+          <ul>
+            <li>Export masters at 44.1 or 48 kHz / 24‑bit, create a -14 LUFS integrated master for streaming (or provide stems for mastering).</li>
+            <li>Provide multiple edits: short (3–5 min), loopable segment, and a long mix for background contexts.</li>
+            <li>Include metadata: filename conventions, Title — Intended Use, ISRC (if available), composer credits, and suggested tags (e.g., 'preoperative', 'relaxation').</li>
+            <li>Package stems in clearly labeled folders (vocals, pads, percussion) and include a README.txt with licensing terms and recommended uses.</li>
+            <li>Consider offering instrumental-only or vocal-light mixes to increase placement in clinical playlists and apps.</li>
+          </ul>
+        </div>
 
       </section>
 
