Refocus artist guidance: emphasize digital/streaming delivery, stems, metadata and licensing

--- a/research-library.html
+++ b/research-library.html
@@ -66,11 +66,11 @@
             <h4>Limitations</h4>
             <p>Moderate sample size and short experimental sessions; TMS effects are localized and may not map directly onto naturalistic listening or long‑term therapy.</p>
 
-            <h4>Recommendations for musical artists</h4>
+            <h4>Recommendations for musical artists (digital & streaming focus)</h4>
             <ul>
-              <li>Design pieces with clear, emotionally salient moments (predictable builds and peaks) to engage reward circuitry.</li>
-              <li>Use motifs and structure that reinforce repeat listening and anticipation — these boost both 'wanting' and 'liking'.</li>
-              <li>Collaborate with clinicians to translate lab findings into patient‑centered interventions or live‑music bedside programs.</li>
+              <li>Produce recordings with emotionally salient moments (predictable builds and peaks) to engage listeners on streaming platforms.</li>
+              <li>Make multiple edits: a 3–5 minute primary track, a loopable segment, and an extended mix for background use — this helps playlists and clinical use-cases.</li>
+              <li>Provide clear metadata (title, artist, ISRC if available), and short artist notes on intended use (e.g., relaxation, grounding) so clinicians/curators can match tracks to patient needs.</li>
             </ul>
           </div>
         </article>
@@ -93,10 +93,10 @@
             <h4>Limitations</h4>
             <p>No direct imaging or neurochemical measures — mechanisms are inferred. Short lab sessions reduce ecological validity for therapeutic settings.</p>
 
-            <h4>Recommendations for musical artists</h4>
+            <h4>Recommendations for musical artists (digital & streaming focus)</h4>
             <ul>
-              <li>Use music intentionally to reinforce desired behaviours — short cues paired with positive outcomes can harness reward learning.</li>
-              <li>Tailor complexity and familiarity to your audience (novice listeners may respond differently than musicians).</li>
+              <li>Design short cue tracks and micro‑loops for reinforcement contexts (e.g., 10–30s motifs that can be paired with exercises or cues in apps).</li>
+              <li>Tune complexity and arrangement for non‑expert listeners; provide both 'full' and 'stripped' versions to increase placement opportunities on playlists or apps.</li>
             </ul>
           </div>
         </article>
@@ -119,10 +119,10 @@
             <h4>Limitations</h4>
             <p>Marked heterogeneity (differences in music protocols, timing, measures), and several small trials with unclear or high risk of bias.</p>
 
-            <h4>Recommendations for musical artists</h4>
+            <h4>Recommendations for musical artists (digital & streaming focus)</h4>
             <ul>
-              <li>Offer short, calming, patient‑centered playlists for preoperative waiting rooms (consider patient choice).</li>
-              <li>Consider providing live‑music bedside sessions where safe — these can improve satisfaction and recovery metrics.</li>
+              <li>Create short, calming playlists tailored to preoperative or waiting areas; make them available on streaming services and as downloadable playlists for clinical use (public domain/ licensed appropriately).</li>
+              <li>Provide multiple file formats and clear usage rights so hospitals can integrate tracks into patient music systems, relaxation apps, or preoperative video content.</li>
             </ul>
           </div>
         </article>
@@ -145,10 +145,10 @@
             <h4>Limitations</h4>
             <p>Immediate outcomes only (no long‑term follow‑up); possible expectancy/placebo effects because full blinding is infeasible with live music.</p>
 
-            <h4>Recommendations for musical artists</h4>
+            <h4>Recommendations for musical artists (digital & streaming focus)</h4>
             <ul>
-              <li>Create short (3–5 minute) patient‑centred pieces optimized for calm and familiarity — allow patients to choose when possible.</li>
-              <li>Train musicians for brief bedside or preoperative performance focusing on soothing timbres and steady tempos.</li>
+              <li>Prepare short (3–5 minute) recorded pieces optimized for calm and familiarity; provide instrumental and vocal‑light versions for wider clinical use.</li>
+              <li>Include stems or isolated mixes (vocals/instrumental) and explicit licensing details so tracks can be repurposed for apps, in‑hospital music programs, and remote delivery to patients.</li>
             </ul>
           </div>
         </article>
@@ -171,10 +171,10 @@
             <h4>Limitations</h4>
             <p>Laboratory induced pain and short outcomes — careful translation is needed for complex chronic or palliative pain populations.</p>
 
-            <h4>Recommendations for musical artists</h4>
+            <h4>Recommendations for musical artists (digital & streaming focus)</h4>
             <ul>
-              <li>Develop rhythmic, participatory tracks with clear pulses encouraging safe movement (e.g., tapping, gentle sway) to enhance analgesic effects.</li>
-              <li>Use predictable structure and strong beats to make synchronization intuitive for nonmusicians.</li>
+              <li>Create rhythmic, participatory tracks that include easily extractable 20–40s synchronizable segments (for app exercises or guided movement sessions).</li>
+              <li>Provide high-quality stems and tempo markings (BPM) so app developers and clinicians can synchronize audio with movement cues reliably.</li>
             </ul>
           </div>
         </article>
