Add research exports (JSON/CSV), sample stems pack + zip, clinical streaming guide and downloads; link them from site

--- a/multimedia.html
+++ b/multimedia.html
@@ -42,6 +42,15 @@
       </section>
 
       <section>
+        <h3>Sample stems pack — MadMooze (demo)</h3>
+        <p>Download a small placeholder stems package (demo) including a README and metadata so you can see how to format stems for clinical/streaming delivery:</p>
+        <ul>
+          <li><a href="assets/madmooze_sample_stems_demo.zip">Download MadMooze sample stems (ZIP)</a></li>
+          <li><a href="assets/streaming_checklist.txt">Download the Streaming Checklist (txt)</a></li>
+        </ul>
+      </section>
+
+      <section>
         <h3>Example playlists (recommended for bedside, preoperative, or pain relief)</h3>
         <p>Below are suggested playlist themes. For copyright reasons, we provide examples as themes and guidance rather than hosted tracks. To add tracks you own or that are public domain, ask us to add an embedded playlist.</p>
         <ul>
