--- a/research-library.html
+++ b/research-library.html
@@ -40,8 +40,10 @@
         </div>
 
         <div class="export">
-          <button id="downloadJSON">Download JSON</button>
-          <button id="downloadCSV">Download CSV</button>
+          <a href="assets/research-library.json" class="download-link">Download JSON (permanent)</a>
+          <a href="assets/research-library.csv" class="download-link">Download CSV (permanent)</a>
+          <button id="downloadJSON">Generate JSON</button>
+          <button id="downloadCSV">Generate CSV</button>
         </div>
       </div>
 
