--- a/tools.html
+++ b/tools.html
@@ -82,6 +82,15 @@ gain.gain.linearRampToValueAtTime(0.02, ctx.currentTime + 4);
           </ul>
         </div>
 
+        <div class="tool-card">
+          <h3>Downloads & checklist</h3>
+          <ul>
+            <li><a href="docs/clinical-streaming-guide.md">How I prepare tracks for clinical streaming (guide)</a></li>
+            <li><a href="assets/streaming_checklist.txt">Streaming checklist (downloadable)</a></li>
+            <li><a href="assets/madmooze_sample_stems_demo.zip">Sample stems pack (MadMooze demo ZIP)</a></li>
+          </ul>
+        </div>
+
       </section>
 
       <h3>Video / deeper demos</h3>
