Tools page: update toolchain to Ardour (Ubuntu), x42/calf/LSP plugins, ffmpeg, ardour_fixer, Audacity, SUNO Studio, VSCode/Trae, RStudio, gedit

--- a/tools.html
+++ b/tools.html
@@ -32,12 +32,15 @@
 
       <section class="tools-grid">
         <div class="tool-card">
-          <h3>1) Tools I use</h3>
+          <h3>1) Tools I use (my current toolchain)</h3>
           <ul>
-            <li>DAW: Ableton Live / Reaper — session for improvisation, arrangement views</li>
-            <li>Soft synths & plugins: Valhalla Supermassive (reverb/delay), Native Instruments, Kontakt, Serum</li>
-            <li>Field recordings & Binaural: binaural mics, zoom recorders</li>
-            <li>Software utilities: Reaper scripts, ffmpeg for mastering/export, Tone.js / WebAudio for demos</li>
+            <li>DAW (primary): <strong>Ardour</strong> on Linux (Ubuntu) — main composition, recording, mixing and session work</li>
+            <li>Plugins: x42, Calf Studio, and <strong>LSP (Linux Studio Plugins)</strong> for synths, effects and processing on Linux</li>
+            <li>Audio utilities: <strong>ffmpeg</strong> (command‑line) for batch conversion, mastering automation, renders; <code>ardour_fixer</code> script for Ardour project fixes and automation</li>
+            <li>Quick editing / audition: <strong>Audacity</strong> for small edits, quick exports and waveform inspection (local installs)</li>
+            <li>Web tools: <strong>SUNO Studio</strong> (web‑based creative AI and mastering/production workflows)</li>
+            <li>Field recording: small recorders and binaural setups for textural layers and patient‑centred audio captures</li>
+            <li>Coding/editing: <strong>VS Code</strong> (Trae when using Windows), <strong>RStudio</strong> for any analytics, and lightweight <strong>gedit</strong> for quick edits.</li>
           </ul>
         </div>
 
