Site: add Glossary link and expand nav; include playlists placeholders and assuagement references

--- a/about.html
+++ b/about.html
@@ -18,7 +18,10 @@
             <a href="education.html">Healthcare Education</a>
             <a href="research-library.html">Research Library</a>
             <a href="tools.html">Tools / How I Create</a>
+            <a href="apps.html">Apps &amp; Scripts</a>
+            <a href="ai-prompts.html">AI Prompt Guide</a>
             <a href="multimedia.html">Multimedia</a>
+            <a href="glossary.html">Glossary</a>
             <a href="public.html">Public Info</a>
             <a href="donate.html">Donate</a>
             <a href="contact.html">Contact</a>
@@ -28,6 +31,7 @@
     <main class="main-content">
 <h2>About FreeEd4Med</h2>
 <p>FreeEd4Med.org blends evidence‑based medical education with creative music partnerships. We work with artists (including MadMoozeMusic) and partners like Songs of Love Foundation to create music‑for‑healing resources, clinical programs, and community outreach.</p>
+<p>We use the term <strong>assuagement</strong> (see <a href="glossary.html">Glossary</a>) to describe reducing the intensity of experiences such as pain, anxiety, and grief — a central goal of music-for-healing work.</p>
     </main>
     <footer class="footer">
       <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a></p>
