--- a/donate.html
+++ b/donate.html
@@ -21,11 +21,14 @@
                 <a href="education.html">Healthcare Education</a>
                 <a href="research-library.html">Research Library</a>
                 <a href="tools.html">Tools / How I Create</a>
+                <a href="apps.html">Apps &amp; Scripts</a>
+                <a href="ai-prompts.html">AI Prompt Guide</a>
                 <a href="multimedia.html">Multimedia</a>
                 <a href="public.html">Public Info</a>
                 <a href="donate.html" class="active">Donate</a>
                 <a href="contact.html">Contact</a>
                 <a href="about.html">About</a>
+                <a href="glossary.html">Glossary</a>
             </nav>
         </header>
 
