--- a/multimedia.html
+++ b/multimedia.html
@@ -18,6 +18,8 @@
         <a href="education.html">Healthcare Education</a>
         <a href="research-library.html">Research Library</a>
         <a href="tools.html">Tools / How I Create</a>
+        <a href="apps.html">Apps &amp; Scripts</a>
+        <a href="ai-prompts.html">AI Prompt Guide</a>
         <a href="multimedia.html">Multimedia</a>
         <a href="public.html">Public Info</a>
         <a href="donate.html">Donate</a>
@@ -28,6 +30,7 @@
 
     <main class="main-content">
       <h2>Multimedia — Songs & Playlists for Healing</h2>
+      <p><em>These resources are oriented toward assuagement — helping reduce the intensity of pain, anxiety, or grief through curated musical experiences and digital delivery.</em></p>
 
       <section>
         <h3>Songs of Love Foundation — how to request, donate, or volunteer</h3>
@@ -48,6 +51,16 @@
           <li><a href="assets/madmooze_sample_stems_demo.zip">Download MadMooze sample stems (ZIP)</a></li>
           <li><a href="assets/streaming_checklist.txt">Download the Streaming Checklist (txt)</a></li>
         </ul>
+      </section>
+
+      <section>
+        <h3>Playlists & Revenue (streaming)</h3>
+        <p>We plan to publish curated playlists on streaming platforms to support the nonprofit with royalty income. Links below are placeholders until playlists are created.</p>
+        <ul>
+          <li>YouTube playlist: <a href="#" id="youtubePlaylist">coming soon — publish &amp; link</a></li>
+          <li>Spotify playlist: <a href="#" id="spotifyPlaylist">coming soon — publish &amp; link</a></li>
+        </ul>
+        <p>When playlists are live we recommend enabling monetization, adding clear descriptions linking to Songs of Love and FreeEd4Med, and adding artist credit (MadMoozeMusic) to help donations and visibility.</p>
       </section>
 
       <section>
