--- a/research-library.html
+++ b/research-library.html
@@ -17,16 +17,20 @@
         <a href="index.html">Home</a>
         <a href="education.html">Healthcare Education</a>
         <a href="research-library.html">Research Library</a>
+        <a href="tools.html">Tools / How I Create</a>
+        <a href="apps.html">Apps &amp; Scripts</a>
+        <a href="ai-prompts.html">AI Prompt Guide</a>
         <a href="public.html">Public Info</a>
         <a href="donate.html">Donate</a>
         <a href="contact.html">Contact</a>
         <a href="about.html">About</a>
+        <a href="glossary.html">Glossary</a>
       </nav>
     </header>
 
     <main class="main-content">
       <h2>Research Library — Music for Healing (Open Access only)</h2>
-      <p>Selected open‑access research relevant to music‑for‑healing. Each entry links to the DOI and the full OA text when available. Curated two‑paragraph synopsis + short critical appraisal included.</p>
+      <p>Selected open‑access research relevant to music‑for‑healing (focus: <strong>assuagement</strong> — reducing the intensity of pain, anxiety, and grief). Each entry links to the DOI and the full OA text when available. Curated two‑paragraph synopsis + short critical appraisal included.</p>
 
       <div class="library-controls">
         <div class="filters">
