--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <a href="education.html">Healthcare Education</a>
         <a href="research-library.html">Research Library</a>
         <a href="tools.html">Tools / How I Create</a>
+        <a href="apps.html">Apps &amp; Scripts</a>
+        <a href="ai-prompts.html">AI Prompt Guide</a>
         <a href="multimedia.html">Multimedia</a>
+        <a href="glossary.html">Glossary</a>
         <a href="public.html">Public Info</a>
         <a href="donate.html">Donate</a>
         <a href="contact.html">Contact</a>
