--- a/ai-prompts.html
+++ b/ai-prompts.html
@@ -20,7 +20,7 @@
         <a href="tools.html">Tools / How I Create</a>
         <a href="apps.html">Apps & Scripts</a>
         <a href="ai-prompts.html">AI Prompt Guide</a>
-        <a href="multimedia.html">Multimedia</a>
+        <a href="public.html#multimedia">Multimedia</a>
         <a href="donate.html">Donate</a>
         <a href="contact.html">Contact</a>
       </nav>
