--- a/donate.html
+++ b/donate.html
@@ -23,7 +23,7 @@
                 <a href="tools.html">Tools / How I Create</a>
                 <a href="apps.html">Apps &amp; Scripts</a>
                 <a href="ai-prompts.html">AI Prompt Guide</a>
-                <a href="multimedia.html">Multimedia</a>
+                <a href="public.html#multimedia">Multimedia</a>
                 <a href="public.html">Public Info</a>
                 <a href="donate.html" class="active">Donate</a>
                 <a href="contact.html">Contact</a>
