Remove ardour_fixer.sh, point apps to ardour_fixer.py and update scripts README

--- a/apps.html
+++ b/apps.html
@@ -56,7 +56,7 @@
         <div class="tool-card">
           <h3>Scripts (placeholders)</h3>
           <ul>
-            <li><a href="assets/scripts/ardour_fixer.sh">ardour_fixer.sh (placeholder)</a></li>
+            <li><a href="assets/scripts/ardour_fixer.py">ardour_fixer.py — Python utility (preferred)</a></li>
             <li><a href="assets/scripts/README.md">scripts README</a></li>
           </ul>
         </div>
