Accessibility: add navigation role & aria-label across site header navs

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             <img src="images/logo.png" alt="FreeEd4Med Logo" class="logo" />
             <h1>FreeEd4Med.org</h1>
         </div>
-        <nav class="navbar">
+        <nav class="navbar" role="navigation" aria-label="Main site navigation">
             <a href="index.html">Home</a>
             <a href="education.html">Healthcare Education</a>
             <a href="research-library.html">Research Library</a>
