Glossary: add missing terms and rewrite descriptive/tone entries (no duplicates, professional)

--- a/glossary.html
+++ b/glossary.html
@@ -47,70 +47,82 @@
           <p>These words describe perceived qualities of sound and tone. They are useful when communicating artistic goals but are subjective—provide concrete references where possible.</p>
           <dl>
             <dt>Air</dt>
-            <dd>High-frequency content (commonly >12 kHz) that imparts brilliance, space, and a sense of openness in vocals or mixes.</dd>
+            <dd>High‑frequency content above ~12 kHz that creates a sense of openness and detail. Commonly enhanced with gentle EQ boosts or exciters to add polish and perceived clarity without raising harshness.</dd>
 
             <dt>Body</dt>
-            <dd>Midrange fullness (≈200–600 Hz) that conveys weight and warmth in instruments and vocals.</dd>
+            <dd>Perceived fullness in the midrange (typically ~200–600 Hz) that gives instruments and vocals weight and presence in the mix. Lack of body can make elements sound thin or distant.</dd>
 
             <dt>Boomy</dt>
-            <dd>An excessive build-up of low or low‑mid energy that produces an overpowering sustain or rumble in a sound.</dd>
+            <dd>An over‑emphasis of low and low‑mid frequencies which produces excessive sustain or rumble (often felt rather than precisely heard). Boomy mixes usually benefit from targeted cuts in the 40–160 Hz region and tighter transient shaping.</dd>
 
             <dt>Boxy</dt>
-            <dd>A concentrated midrange coloration that removes low/high balance, making sounds feel constrained or nasal.</dd>
+            <dd>A constricted, honky quality caused by an excess of energy in the low‑mid band (≈200–800 Hz) that makes sounds lose clarity and feel congested. Surgical mid cuts and careful mic placement normally remedy it.</dd>
 
             <dt>Chug</dt>
-            <dd>A punchy, tight midrange character often associated with rhythmic guitar patterns in rock and metal.</dd>
+            <dd>A punchy, percussive midrange character often heard in rhythmic guitars or muted riffs; prized in rock/metal for forward‑pushing rhythm but best balanced to avoid masking other mid instruments.</dd>
 
-            <dt>Cloudiness / Muddy</dt>
-            <dd>Low‑mid frequency buildup (≈200–500 Hz) that blurs clarity and reduces separation between elements.</dd>
+            <dt>Cloudiness</dt>
+            <dd>Excess low‑mid buildup (≈200–500 Hz) that softens transients and reduces separation — similar to 'muddy' but used to describe a diffuse, unfocused density across the mix.</dd>
+
+            <dt>Muddy</dt>
+            <dd>A mix condition where low‑mid energy masks detail and intelligibility, causing a lack of clarity; often cured by subtractive EQ and improved instrument separation.</dd>
 
             <dt>Creaminess</dt>
-            <dd>A smooth, pleasing mid/high balance often associated with gentle harmonic saturation and soft compression.</dd>
+            <dd>A smooth, rounded tonal balance with pleasant midrange sweetness, frequently achieved with gentle harmonic saturation and warm compression.</dd>
 
-            <dt>Crunchy / Ratty</dt>
-            <dd>Slightly distorted or gritty timbre caused by overdrive, clipping, or aggressive processing.</dd>
+            <dt>Crunchy</dt>
+            <dd>A slightly broken‑up, harmonically rich texture produced by overdrive, aggressive saturation, or tight compression — useful for character but can be fatiguing if excessive.</dd>
+
+            <dt>Ratty</dt>
+            <dd>A gritty, harsh texture often caused by excessive high‑mid distortion, clipping or poor processing; usually an undesirable by‑product of over‑processing.</dd>
 
             <dt>Fatiguing</dt>
-            <dd>A quality (often excessive high‑mid energy or over‑compression) that causes listener discomfort over time.</dd>
+            <dd>A listening quality caused by repeated exposure often due to excess high‑mid energy or over‑compression, leading to listener discomfort over time.</dd>
 
             <dt>Fizz</dt>
-            <dd>An exaggerated sparkly top end (upper high‑mid to low treble) that can add energy but becomes harsh at excess.</dd>
+            <dd>An exaggerated upper high‑mid shimmer (lower treble) that can make cymbals and vocals 'sparkly' but becomes harsh or sibilant when overdone.</dd>
 
             <dt>Glue</dt>
-            <dd>A perceived cohesion across mix elements, typically achieved with gentle bus compression and careful tonal balance.</dd>
+            <dd>A perceptual sense of cohesiveness between mix elements often achieved with subtle bus compression, balancing, and harmonic blending that makes tracks feel like one piece.</dd>
 
-            <dt>Growl / Snarl</dt>
-            <dd>Low‑frequency distortion or aggressive mid‑range grit used for character; growl is deeper (bass), snarl is more upper‑mid harshness.</dd>
+            <dt>Growl</dt>
+            <dd>A low, throaty distortion character used to add weight or grit (commonly on bass or low synths).</dd>
+
+            <dt>Snarl</dt>
+            <dd>A higher‑mid aggressive character similar to growl but brighter and more biting; often used on guitars or edgy vocal lines.</dd>
 
             <dt>Hiss</dt>
-            <dd>Unwanted high‑frequency noise (tape, electronics, or environmental) lacking musical pitch.</dd>
+            <dd>Non‑musical high‑frequency noise without a defined pitch (tape hiss, electronics). Typically reduced with noise‑reduction tools in post‑production.</dd>
 
             <dt>Honky / Nasal / Pinched</dt>
-            <dd>A midrange emphasis (≈400 Hz–1 kHz) producing a constrained or nasal quality in voices or instruments.</dd>
+            <dd>Midrange emphasis (≈400 Hz–1 kHz) that produces a thin, nasal coloration typically corrected with surgical cuts or bandwidth‑adjusted EQ.</dd>
 
             <dt>Lift</dt>
-            <dd>A bright, airy boost in the high treble (approx. 10–16 kHz) used to add clarity and shimmer without increasing sibilance.</dd>
+            <dd>A deliberate light boost in the very high frequencies (≈10–16 kHz) to impart air and shimmer—apply gently to avoid exaggerated sibilance or harshness.</dd>
 
             <dt>Presence</dt>
-            <dd>An upper‑mid emphasis (≈2–6 kHz) that helps vocals and lead elements cut through a mix.</dd>
+            <dd>An upper‑mid frequency focus (≈2–6 kHz) that helps vocals and lead instruments cut through and remain intelligible in dense mixes.</dd>
 
             <dt>Punchiness</dt>
-            <dd>The perceived impact of attack and transient detail, dependent on transient shape, EQ, and compression.</dd>
+            <dd>Sensation of attack and impact produced by transient strength and frequency balance, often shaped with transient designers, compression and EQ.</dd>
 
             <dt>Pumping</dt>
-            <dd>Volume surges caused by dynamic processors (compression/limiting) reacting to program material—sometimes desirable, often undesirable.</dd>
+            <dd>Short bursts of audible level fluctuation caused by a compressor or limiter responding to loud elements; can be intentional (creative) or an unwanted artifact of misconfigured dynamics processing.</dd>
 
             <dt>Richness</dt>
-            <dd>A full, harmonically pleasant sound with depth across frequency bands.</dd>
+            <dd>A full, harmonically complex tonality with pleasing overtone content across frequencies, often perceived as 'fuller' sound.</dd>
 
-            <dt>Ring / Resonance</dt>
-            <dd>Persistent frequency reinforcement (often unwanted) that can appear as a tonal ringing after a hit or transient.</dd>
+            <dt>Ring</dt>
+            <dd>A resonant frequency that sustains after an event (e.g., snare hit) — audible as a narrow, lingering tone usually corrected with notch EQ or editing.</dd>
 
-            <dt>Silkiness / Warmth</dt>
-            <dd>Soft, smooth high/frequency balance (silk) or pleasing low‑mid content and even harmonic saturation (warmth).</dd>
+            <dt>Silkiness</dt>
+            <dd>A smooth, delicate treble quality that adds perceived refinement without harshness; often associated with high‑quality analog or subtle processing.</dd>
+
+            <dt>Warmth</dt>
+            <dd>A pleasing low/mid emphasis and subtle harmonic coloration that contributes to a comfortable, rounded tonal character.</dd>
 
             <dt>Subbiness / Subby</dt>
-            <dd>Excessive energy below ≈60 Hz that can overwhelm mixes and playback rigs.</dd>
+            <dd>Excessive infrasonic or subwoofer-frequency energy (typically <60 Hz) that can cloud mixes and cause imbalance on small playback systems.</dd>
           </dl>
         </article>
 
