Add install helpers to apps page; merge duplicate 'Ring' entries; fix glossary search index; regenerate glossary exports

--- a/apps.html
+++ b/apps.html
@@ -54,10 +54,13 @@
         </div>
 
         <div class="tool-card">
-          <h3>Scripts (placeholders)</h3>
+          <h3>Scripts (installed / examples)</h3>
           <ul>
             <li><a href="assets/scripts/ardour_fixer.py">ardour_fixer.py — Python utility (preferred)</a></li>
             <li><a href="assets/scripts/README.md">scripts README</a></li>
+            <li><a href="assets/scripts/install_unix.sh">install_unix.sh — unix setup helper</a></li>
+            <li><a href="assets/scripts/install_windows.bat">install_windows.bat — Windows setup helper</a></li>
+            <li><a href="assets/scripts/requirements.txt">requirements.txt — Python deps (colorama)</a></li>
           </ul>
         </div>
 
