Fix: restore missing dt 'Air' after flattening glossary

--- a/glossary.html
+++ b/glossary.html
@@ -43,6 +43,7 @@
         </article>
 
         
+            <dt>Air</dt>
             <dd>High‑frequency content above ~12 kHz that creates a sense of openness and detail. Commonly enhanced with gentle EQ boosts or exciters to add polish and perceived clarity without raising harshness.</dd>
 
             <dt>Body</dt>
