Nav cleanup: remove Multimedia & Healthcare Education links; remove multimedia section from Public page; unify navbar across V7 pages

--- a/ai-prompts.html
+++ b/ai-prompts.html
@@ -15,12 +15,11 @@
       </div>
       <nav class="navbar" role="navigation" aria-label="Main site navigation">
         <a href="index.html">Home</a>
-        <a href="education.html">Healthcare Education</a>
         <a href="research-library.html">Research Library</a>
         <a href="tools.html">Tools / How I Create</a>
         <a href="apps.html">Apps & Scripts</a>
         <a href="ai-prompts.html">AI Prompt Guide</a>
-        <a href="public.html#multimedia">Multimedia</a>
+        <a href="public.html">Public Info</a>
         <a href="donate.html">Donate</a>
         <a href="contact.html">Contact</a>
       </nav>
