--- a/contact.html
+++ b/contact.html
@@ -13,20 +13,18 @@
         <img src="images/logo.png" alt="FreeEd4Med Logo" class="logo" />
         <h1>FreeEd4Med.org</h1>
       </div>
-      <nav class="navbar" role="navigation" aria-label="Main site navigation">
-        <a href="index.html">Home</a>
-        <a href="education.html">Healthcare Education</a>
-        <a href="research-library.html">Research Library</a>
-        <a href="tools.html">Tools / How I Create</a>
-        <a href="apps.html">Apps &amp; Scripts</a>
-        <a href="ai-prompts.html">AI Prompt Guide</a>
-        <a href="public.html#multimedia">Multimedia</a>
-        <a href="public.html">Public Info</a>
-        <a href="donate.html">Donate</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About</a>
-        <a href="glossary.html">Glossary</a>
-      </nav>
+      <!-- old nav removed -->
+        <nav class="navbar" role="navigation" aria-label="Main site navigation">
+          <a href="index.html">Home</a>
+          <a href="research-library.html">Research Library</a>
+          <a href="tools.html">Tools / How I Create</a>
+          <a href="apps.html">Apps &amp; Scripts</a>
+          <a href="ai-prompts.html">AI Prompt Guide</a>
+          <a href="public.html">Public Info</a>
+          <a href="donate.html">Donate</a>
+          <a href="contact.html">Contact</a>
+          <a href="about.html">About</a>
+        </nav>
     </header>
     <main class="main-content">
 
